--- a/acumos-portal-fe/src/main/webapp/app/notification/notification-details.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/notification/notification-details.template.html
@@ -35,17 +35,12 @@ limitations under the License.
 					<li>Manage Notifications</li>
 				</ul>
 			</div>
-			<!-- <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--4-col-phone text-right lg-v-self-center">
-								<button class="mdl-button mdl-js-button mdl-button--colored hide-xs">add new model</button>
-								<button class="mdl-button mdl-button--fab mdl-button--colored mdl-js-ripple-effect mob-add-button hide-sm hide-md hide-lg hide-xl"><i class="material-icons">add</i></button>
-							</div> -->
 		</div>
 	</section>
 	
 	<div class="tbl-notification-container">
 		<!-- copy from here (start) -->
-		<div class="notification-btn-container"
-			ng-if="filtertedNotification.length || search.length > 0">
+		<div class="notification-btn-container" > <!-- filtertedNotification.length || search.length > 0 -->
 			<div class="note-btn-inner">
 				<button class="mdl-button mdl-js-button btn-secondary"
 					ng-click="refreshNotification()">
@@ -60,11 +55,10 @@ limitations under the License.
 					<i class="far fa-trash-alt"></i> Move to trash
 				</button>			
 			</div>
-			<div class="mdl-textfield mdl-js-textfield text-right">
-					<input class="mdl-textfield__input notification-search" type="text"
-						placeholder="Filter" ng-model="$parent.search">
-					<!-- <label class="mdl-textfield__label" for="module-search"></label> -->
-				</div>
+			<!-- <div class="mdl-textfield mdl-js-textfield text-right">
+				<input class="mdl-textfield__input notification-search" type="text"
+					placeholder="Filter" ng-model="$parent.search">
+			</div> -->
 			<!-- 							<div>
 								<div class="select-control">
 									<md-select ng-model="action.name" placeholder="Sort By - All">  md-on-open="loadUsers()"
@@ -74,43 +68,33 @@ limitations under the License.
 		</div>
 		
 		<div>
-			<table ng-if='notificationManageObj.length'
-				class="note-table tbl-notification-list">
+			<table ng-show='notificationManageObj.length' 
+				class="note-table tbl-notification-list mdl-data-table mdl-js-data-table mdl-shadow--2dp admin-tbl1 mdl-js-data-table"
+				datatable="ng" dt-options="dtOptions" dt-columns="dtColumns" dt-column-defs="dtColumnDefs" dt-instance="dtInstance">
 				<colgroup>
+					<col style="width: 1%; display:none">
 					<col style="width: 5%;">
-
-					<col style="width: 80%;">
+					<col style="width: 79%;">
 					<col style="width: 15%;">
 				</colgroup>
 				<thead>
-					<tr>
-						<th><label
+					<tr> 
+						<th style="display:none"></th> 				<!-- Kept empty on purpose, datatables sorts the first column by defaults which is not needed here.-->
+						<th class="sorting_disabled"><label
 							class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect"
 							for="checkbox-1" id="checkbox-label"> <input
 								type="checkbox" id="checkbox-1" class="mdl-checkbox__input"
 								ng-model="selectAll" ng-click="setSelectAll(selectAll)"
 								ng-checked="selectAllStatus" /> <span
 								class="mdl-checkbox__label"></span>
-						</label></th>
-						<th
-							ng-click="orderByField='message'; reverseSortSubject = !reverseSortSubject; reverseSort = reverseSortSubject;">Subject<span
-							ng-if='orderByField!="message"' class="gridcell-sort deactivate"></span><span
-							ng-if='orderByField=="message"'
-							ng-class="reverseSort?'ascending':'descending'"
-							class="gridcell-sort"></span></th>
-						<th
-							ng-click="orderByField='start'; reverseSortDate = !reverseSortDate; reverseSort = reverseSortDate;">Date
-							<span ng-if='orderByField!="start"'
-							class="gridcell-sort deactivate"></span><span
-							ng-if='orderByField=="start"'
-							ng-class="reverseSort?'ascending':'descending'"
-							class="gridcell-sort"></span>
-						</th>
+						</label> </th>
+						<th>Subject</th>
+						<th>Date</th>
 					</tr>
 				</thead>
 				<tbody>
-					<tr
-						ng-repeat="notification in ( ($parent.filtertedNotification = (notificationManageObj | filter:filterByDateSubject))) | orderBy:orderByField:reverseSort">
+					<tr ng-repeat="notification in notificationManageObj">
+						<td style="display:none"></td>
 						<td ng-class="{'read-notification': notification.viewed}"><label
 							class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect"
 							for="checkBox_{{$index}}" id="checkBox_{{$index}}"> <input
@@ -124,17 +108,13 @@ limitations under the License.
 						<td ng-class="{'read-notification': notification.viewed}">{{notification.start
 							| date : "MM/dd/yyyy" }}</td>
 					</tr>
-					<div class="alert c-info margin-b2 text-center"
-						ng-if="!filtertedNotification.length">
-						<strong>No Results found</strong>
-					</div>
 				</tbody>
 			</table>
 
 			
 
 			<!-- Pagination Starts-->
-			<div class="pagination-wrapper">
+			<!-- <div class="pagination-wrapper">
 				<div class="pagination-left-section">
 					<span>Showing </span>
 					<div class="select-control">
@@ -205,7 +185,7 @@ limitations under the License.
 							ng-disabled="totalPages == (selectedPage + 1) || SetDataLoaded">Next</button>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<br />
 			<!-- Pagination Ends -->
 		</div>
