fix for preview image
Change-Id: I92517322c8821f2bd8f8aaa38693dd607359f3bc
ISSUE-ID: ACUMOS-3976
Description: IST: Preview Model: Default Model Image is not displaying on model details
Signed-off-by: BelagamSrividya <BS00561090@TechMahindra.com>

--- a/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/model-edit/md-model-edit-workflow.template.html
@@ -1919,9 +1919,10 @@ limitations under the License.
 																class="md-padding"> <!-- Model Detail Preview -->
 															<md-content> <span
 																class="md-headline2 mob-disblock"> <img
-																class="solutions-img" ng-src="/api/solutions/{{solution.solutionId}}/picture" />{{solution.name}}
+																class="solutions-img" ng-src="/api/solutions/{{solution.solutionId}}/picture" onerror="this.onerror=null;this.src='images/default-model.png'"/>{{solution.name}}
 															
 															</span>
+															
 															<div class="clearfix" style="margin: 10px 0pxR"></div>
 															</md-content>
 															<div class="page-wrapper3">
