--- a/acumos-portal-fe/src/main/webapp/app/userDetail/userDetail.template.html
+++ b/acumos-portal-fe/src/main/webapp/app/userDetail/userDetail.template.html
@@ -134,7 +134,7 @@ limitations under the License.
 				<div class="user-email">
 					<md-input-container class="md-block"> <label>
 						Email</label> <input name="uemail" ng-disabled="disableEmail"
-						ng-model="user.email" type="text" ng-blur="emailVisited=true"
+						ng-model="user.emailId" type="text" ng-blur="emailVisited=true"
 						ng-focus="emailVisited=false"
 						ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/" required />
 					<div class="help-inline validation-msgs"
